# GrooveBox

./: .gitignore  README.md  run.sh
.github/: copilot-instructions.md
config/: pad.json
host/engine/: pyproject.toml  setup.py
host/engine/cpp/: audio_engine.cpp
host/engine/groovebox/: audio.py  audio_cpp.py  audio_pygame.py  audio_sd.py  config.py  input_devices.py  main.py  sequencer.py  ui_pygame.py
