[project]
name = "groovebox"
version = "0.1.0"
description = "A Python-based Groovebox application using pygame"
authors = [
    {name = "Hamish Burke", email = "hamishapps@gmail.com"},
]
dependencies = [
    "pygame>=2.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["groovebox*"]
